# kmms_bmusirov_homeworks

./: .gitignore  README.md
241017_bmusirov_refactoring/: after_refactoring_bmusirov.cpp  build_run_after.bat  build_run_before.bat
241029_bmusirov_refactoring/: build_run.bat  io.cpp  io.hpp  main.cpp  main_united.cpp  merge.cpp  merge.hpp  merge_sort.cpp  merge_sort.hpp  random_array.cpp  random_array.hpp
241210_bmusirov_menu/: build_run.bat  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
250206_bmusirov_cmake/: build.bat  run_tests.bat
250206_bmusirov_cmake/projects/: CMakeLists.txt
250206_bmusirov_cmake/projects/long_number/src/: long_number.cpp  long_number.hpp  test.cpp
250206_bmusirov_cmake/projects/long_number/test/: CMakeLists.txt  ilyatest.cpp  test_long_number.cpp
250206_bmusirov_cmake/projects/menu/: build_run.bat  main.cpp  menu_functions.hpp  menu_items.hpp
250206_bmusirov_cmake/projects/sortings/: CMakeLists.txt
250206_bmusirov_cmake/projects/sortings/src/: CMakeLists.txt
250206_bmusirov_cmake/projects/sortings/test/: CMakeLists.txt  test_selection.cpp
250206_bmusirov_cmake/projects/vector_list/: CMakeLists.txt
250206_bmusirov_cmake/projects/vector_list/src/: doubly_linked_list.cpp  doubly_linked_list.hpp  vector.cpp  vector.hpp
250921_bmusirov_game/: main.cpp
cmake_last/: build.bat
cmake_last/projects/: CMakeLists.txt
cmake_last/projects/menu/: menu.hpp  menu_functions.cpp  menu_items.cpp
cmake_last/projects/sortings/: CMakeLists.txt  main.cpp
(+8 files in other folders)
